# concordance

./: CMakeLists.txt  README.md  example-special-words.txt  example-with-special-words.txt  example.txt
include/: Tokenizer.hpp  WordCompiler.hpp
src/: CMakeLists.txt  Tokenizer.cpp  concordance.cpp
tests/: CMakeLists.txt  TestSentenceRecorder.cpp  TestTokenizer.cpp  TestWordCompiler.cpp
